--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Gilberto - QA e FrontEnd</title>
   <meta name="description" content="Analista de Testes & Qualidade de Software & Front-End, Localizado na Paraíba">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
