adicionando target blank

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <ul class="footer-contato">
         <li>gilbertovieiralins97@gmail.com</li>
         <li>(83)9 9949-2337</li>
-        <li><a href="https://www.linkedin.com/in/gilberto-vieira-lj/">Linkedin</a></li>
+        <li><a href="https://www.linkedin.com/in/gilberto-vieira-lj/" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
       </ul>
       <p class="footer-copy">Gilberto. Alguns direitos reservados</p>
     </div>
