ajustes de erro de gramatica

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <div>
         <p class="formacao-texto">
-          Minha mais recente experiência profissional foi o curso intensivo de <strong>automação de testes com Cypress</strong> e já colocando em prática no meu último trabalho. Além disso, continuo me mantenho atualizado sobre <strong>testes automatizados</strong> e cursos de <strong>design</strong> e <strong>front-end</strong>.
+          Minha mais recente experiência profissional foi o curso intensivo de <strong>automação de testes com Cypress</strong> e já colocando em prática no meu último trabalho. Além disso, continuo me mantendo atualizado sobre <strong>testes automatizados</strong> e cursos de <strong>design</strong> e <strong>front-end</strong>.
         </p>
         <ul class="faculdade-lista">
           <li class="faculdade">
